--- a/CD_RECYCLE/CD_RECYCLE/Main.storyboard
+++ b/CD_RECYCLE/CD_RECYCLE/Main.storyboard
@@ -16,31 +16,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BdX-SA-TyU">
-                                <rect key="frame" x="201" y="433" width="116" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="내 주변 수거함 찾기"/>
-                                <connections>
-                                    <segue destination="oFB-an-kKR" kind="show" id="osU-TV-Uh9"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3w-pv-4Ds">
-                                <rect key="frame" x="43" y="417" width="112" height="61"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="사물 검색"/>
-                                <connections>
-                                    <segue destination="toY-Hd-0mG" kind="show" id="PEH-qG-fBa"/>
-                                </connections>
-                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iTunesArtwork.png" translatesAutoresizingMaskIntoConstraints="NO" id="q0J-2V-Jfr">
+                                <rect key="frame" x="67" y="196" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="q0J-2V-Jfr" secondAttribute="height" multiplier="15:8" id="7Jb-LJ-wO9"/>
+                                    <constraint firstAttribute="height" constant="128" id="eBd-67-x9G"/>
+                                    <constraint firstAttribute="width" constant="240" id="kV9-Yr-23Z"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="70" translatesAutoresizingMaskIntoConstraints="NO" id="CQw-3p-6LG">
+                                <rect key="frame" x="90" y="390" width="195" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3w-pv-4Ds">
+                                        <rect key="frame" x="0.0" y="0.0" width="56" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="사물 검색">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="toY-Hd-0mG" kind="show" id="PEH-qG-fBa"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BdX-SA-TyU">
+                                        <rect key="frame" x="126" y="0.0" width="69" height="30"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="주변 수거함">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="oFB-an-kKR" kind="show" id="osU-TV-Uh9"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="bfI-V4-LNI"/>
+                                    <constraint firstAttribute="width" constant="195" id="rRy-D6-NLy"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="q0J-2V-Jfr" secondAttribute="trailing" constant="68" id="6zk-kT-7M2"/>
+                            <constraint firstItem="CQw-3p-6LG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="90" id="70e-JL-dyV"/>
+                            <constraint firstItem="q0J-2V-Jfr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="DYv-5f-Vuo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="CQw-3p-6LG" secondAttribute="bottom" constant="247" id="Ij6-Mm-3Qu"/>
+                            <constraint firstItem="q0J-2V-Jfr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="O6S-dy-Xkh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CQw-3p-6LG" secondAttribute="trailing" constant="90" id="aox-Ha-PxZ"/>
+                            <constraint firstItem="CQw-3p-6LG" firstAttribute="top" secondItem="q0J-2V-Jfr" secondAttribute="bottom" constant="66" id="zex-sT-jQd"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="lKL-JD-DOQ"/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="lKL-JD-DOQ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1079" y="36"/>
+            <point key="canvasLocation" x="1077.5999999999999" y="35.532233883058474"/>
         </scene>
         <!--Camera View Controller-->
         <scene sceneID="F2u-gT-Eeg">
@@ -94,7 +125,7 @@
             </objects>
             <point key="canvasLocation" x="1820" y="35.532233883058474"/>
         </scene>
-        <!--Map View Controller-->
+        <!--내 주변 수거함-->
         <scene sceneID="m6Q-Nm-Xw6">
             <objects>
                 <viewController id="oFB-an-kKR" customClass="MapViewController" customModule="CD_RECYCLE" customModuleProvider="target" sceneMemberID="viewController">
@@ -102,30 +133,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleAspectFit" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="llc-UA-cdq">
-                                <rect key="frame" x="16" y="131" width="329" height="516"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <rect key="contentStretch" x="0.0" y="0.0" width="0.5" height="1"/>
-                            </view>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MZQ-Du-1XH">
-                                <rect key="frame" x="16" y="92" width="343" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <segments>
-                                    <segment title="쓰레기통"/>
-                                    <segment title="폐건전지"/>
-                                    <segment title="폐형광등"/>
-                                    <segment title="아이스팩"/>
-                                </segments>
-                                <connections>
-                                    <action selector="segSelect:" destination="oFB-an-kKR" eventType="valueChanged" id="WFg-2v-IN5"/>
-                                </connections>
-                            </segmentedControl>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cYC-NE-uEO">
+                                <rect key="frame" x="13" y="109" width="346" height="449.5"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MZQ-Du-1XH">
+                                        <rect key="frame" x="0.0" y="0.0" width="346" height="32.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="MZQ-Du-1XH" secondAttribute="height" multiplier="343:31" id="Ac9-Ea-RT3"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="쓰레기통"/>
+                                            <segment title="폐건전지"/>
+                                            <segment title="폐형광등"/>
+                                            <segment title="아이스팩"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="segSelect:" destination="oFB-an-kKR" eventType="valueChanged" id="WFg-2v-IN5"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="llc-UA-cdq">
+                                        <rect key="frame" x="0.0" y="41.5" width="346" height="408"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <rect key="contentStretch" x="0.0" y="0.0" width="0.5" height="1"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="llc-UA-cdq" firstAttribute="top" secondItem="MZQ-Du-1XH" secondAttribute="bottom" constant="10" id="l0M-xe-rnh"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0TG-A8-5PI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="cYC-NE-uEO" firstAttribute="top" secondItem="0TG-A8-5PI" secondAttribute="top" constant="13" id="YNR-Ky-Bjf"/>
+                            <constraint firstItem="0TG-A8-5PI" firstAttribute="trailing" secondItem="cYC-NE-uEO" secondAttribute="trailing" constant="16" id="fGh-0f-YT4"/>
+                            <constraint firstItem="cYC-NE-uEO" firstAttribute="leading" secondItem="0TG-A8-5PI" secondAttribute="leading" constant="13" id="sAH-bR-pcg"/>
+                            <constraint firstItem="0TG-A8-5PI" firstAttribute="bottom" secondItem="cYC-NE-uEO" secondAttribute="bottom" constant="108.5" id="wfn-fZ-caQ"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="g1W-13-YUx"/>
+                    <navigationItem key="navigationItem" title="내 주변 수거함" id="g1W-13-YUx"/>
                     <connections>
                         <outlet property="segControl" destination="MZQ-Du-1XH" id="jop-bo-V31"/>
                         <outlet property="viewContainer" destination="llc-UA-cdq" id="fSt-rz-yIk"/>
@@ -133,18 +179,21 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sh3-CP-0XP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1774" y="950"/>
+            <point key="canvasLocation" x="1773.5999999999999" y="949.47526236881572"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ZuQ-lG-fkm">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EKp-ix-IAx" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jQT-Th-QEZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="jQT-Th-QEZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3oy-ly-wJQ">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="hwP-Eh-Uuj"/>
                     </connections>
@@ -153,7 +202,7 @@
             </objects>
             <point key="canvasLocation" x="66.666666666666671" y="69.642857142857139"/>
         </scene>
-        <!--Prediction Result View Controller-->
+        <!--검색결과-->
         <scene sceneID="WOe-fM-kWW">
             <objects>
                 <viewController id="XVc-tn-LtU" customClass="PredictionResultViewController" customModule="CD_RECYCLE" customModuleProvider="target" sceneMemberID="viewController">
@@ -161,10 +210,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b58-ko-yQ8">
-                                <rect key="frame" x="16" y="91" width="343" height="289"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="출력라벨" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fe8-ch-ZJp">
                                 <rect key="frame" x="16" y="409" width="343" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -187,11 +232,15 @@
                                     <segue destination="oFB-an-kKR" kind="show" id="woX-8q-uv9"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b58-ko-yQ8">
+                                <rect key="frame" x="16" y="96" width="343" height="289"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="m7T-GZ-S0D"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="By5-s9-zaK"/>
+                    <navigationItem key="navigationItem" title="검색결과" id="By5-s9-zaK"/>
                     <connections>
                         <outlet property="imageView" destination="b58-ko-yQ8" id="hYS-v0-WdY"/>
                         <outlet property="nameLabel" destination="fe8-ch-ZJp" id="Ofe-DP-XiN"/>
@@ -204,10 +253,11 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="woX-8q-uv9"/>
+        <segue reference="osU-TV-Uh9"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="camera" catalog="system" width="128" height="94"/>
+        <image name="iTunesArtwork.png" width="512" height="512"/>
         <image name="photo" catalog="system" width="128" height="93"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
